# puff-it-up

./: TAKEHOME.md
bench/: .gitignore  dense.py  dense_debug_results.json  dense_late.py  dense_late_debug_results.json  late.py  late_rerank.py  pyproject.toml
bench/amazon-reviews/: dense.py  dense_late.py  late.py  queries.py
bench/amazon-reviews/results/: amazon_dense_1.txt  amazon_dense_2.txt  amazon_dense_3.txt  amazon_dense_4.txt  amazon_dense_5.txt  amazon_dense_6.txt  amazon_dense_7.txt  amazon_late_1.txt  amazon_late_2.txt  amazon_late_3.txt  amazon_late_4.txt  amazon_late_5.txt  amazon_late_6.txt  amazon_late_7.txt
bench/arguana/: dense.py  dense_late.py  late.py
bench/arguana/results/: arguana_dense_1.txt  arguana_late_1.txt
bench/nfcorpus/: dense.py  dense_late.py  late.py
bench/nfcorpus/results/: nfcorpus_dense_1.txt  nfcorpus_dense_late_1.txt  nfcorpus_late_1.txt
bench/reddit/: dense.py  dense_late.py  late.py
bench/results/: dense_1.txt  dense_2.txt  dense_3.txt  dense_late_1.txt  late_1.txt  late_rerank_1.txt
script/: README.md  bun.lockb  env.ts  index.ts  package.json
script/src/: query.ts  shared.ts  write.ts
web/: mdx-components.tsx  package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/late-interaction/: page.tsx
web/src/components/: Banner.tsx  CodeBlock.tsx  DocsLayout.tsx  Footer.tsx  Header.tsx  Logo.tsx  PerformanceComparison.tsx  ResultsComparison.tsx  Sidebar.tsx  TableOfContents.tsx  index.ts
web/src/content/: article.mdx  article.mdx.d.ts  roadmap.mdx
(+1 files in other folders)
